--- a/src/pages/segubecalanding/index.astro
+++ b/src/pages/segubecalanding/index.astro
@@ -98,7 +98,7 @@ import { Image } from 'astro:assets';
         <div class="flex justify-between items-center flex-shrink-0 mb-5">
             <a href="/" class="flex-shrink-0">
                 <Image 
-                    src="/nyl-white.webp" 
+                    src="/nyl-white.png" 
                     alt="Ramírez y Plascencia" 
                     class="h-10 sm:h-16 md:h-20 max-w-32 sm:max-w-48 md:max-w-52 object-contain"
                     loading="eager"
@@ -111,7 +111,7 @@ import { Image } from 'astro:assets';
             </a>
             <a href="/" class="flex-shrink-0">
                 <Image 
-                    src="/rp_blancos_flip.webp" 
+                    src="/rp_blancos_flip.png" 
                     alt="New York Life" 
                     class="w-32 sm:w-36 md:w-60 lg:w-56 h-auto max-h-none"
                     loading="eager"
