--- a/src/components/index.astro
+++ b/src/components/index.astro
@@ -13,7 +13,7 @@ import Certifications from '../components/Certifications.astro';
 import Contact from '../components/Contact.astro';
 import Footer from '../components/Footer.astro';
 
-const pageTitle = "Seguros RP - Tu Tranquilidad es Nuestro Compromiso";
+const pageTitle = "Seguros Monterrey New York Life - Ramirez y Plascencia";
 const pageDescription = "Especialistas en seguros de vida, gastos médicos mayores y más. Con más de 25 años de experiencia, protegemos lo que más valoras.";
 ---
 
