--- a/src/components/ContactSeguBeca.astro
+++ b/src/components/ContactSeguBeca.astro
@@ -5,21 +5,21 @@ const advisors = [
   {
     name: "Lic. Silvia Plascencia",
     specialty: "Asesora especializada en seguros educativos",
-    image: "/asesor_1.webp",
+    image: "/asesor_1_small.webp",
     phone: "+52 (442) 595 8912",
     phoneHref: "tel:+524461354113"
   },
   {
     name: "Lic. Michelle Ramírez",
     specialty: "Asesora especializada en seguros educativos",
-    image: "/asesor_2.webp",
+    image: "/asesor_2_small.webp",
     phone: "+52 (446) 135 4113",
     phoneHref: "tel:+524461354113"
   },
   {
     name: "Lic. José Ramírez",
     specialty: "Asesor especializado en seguros educativos",
-    image: "/asesor_3.webp",
+    image: "/asesor_3_small.webp",
     phone: "+52 (442) 595 8912",
     phoneHref: "tel:+524461354113"
   }
@@ -350,6 +350,9 @@ const advisors = [
                 <img 
                   src={advisor.image} 
                   alt={advisor.name}
+                  width="80"
+                  height="80"
+                  loading="lazy"
                   style="
                     width: 100%;
                     height: 100%;
