--- a/src/pages/segubecalanding/Segubeca.astro
+++ b/src/pages/segubecalanding/Segubeca.astro
@@ -627,12 +627,12 @@ import ContactSeguBeca from '../../components/ContactSeguBeca.astro';
   </script>
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17382344046"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y67F0BJRHL"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'AW-17382344046');
+    gtag('config', 'G-Y67F0BJRHL');
   </script>
 
   <!-- Google tag (gtag.js) event - delayed navigation helper -->
